test: add deterministic Vector external lane